# safeagent

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  requirements.txt
agents/: escalation.py  intent_classifier.py  intent_handlers.py  researcher.py  safety_arbitration.py
api/: schemas.py
apps/safeagent/: README.md  guard_client.py  llm.py  main.py  requirements.txt
apps/safeagent/agents/: escalation.py  intent_classifier.py  intent_handlers.py  planner.py  safety_arbitration.py  synthesizer.py
apps/safeagent/api/: routes.py  schemas.py
apps/safeagent/evals/: eval_runner.py  safety_report.py
apps/safeagent/graph/: pipeline.py
apps/safeagent/observability/: langsmith_tracer.py
apps/safeagent/safety/: logger.py  (+2 more)
constitution-guard/: README.md  pyproject.toml
constitution-guard/src/constitution_guard/: __init__.py  config.py  guard.py  models.py  pipeline.py
constitution-guard/src/constitution_guard/backends/: base.py  critic.py  gemini.py
constitution-guard/src/constitution_guard/classifiers/: base.py  crisis.py  jailbreak.py  pii.py  toxicity.py
constitution-guard/src/constitution_guard/constitution/: escalation.py  local_scorer.py  principles.py  scorer.py
constitution-guard/src/constitution_guard/integrations/: langgraph.py
constitution-guard/tests/: test_classifiers.py  test_constitution.py  test_guard_wrap.py
evals/: adversarial_prompts.py
graph/: pipeline.py  state.py
retrieval/: vector_store.py  web_search.py
safety/: constitution.py  scorer.py
tests/: test_agents.py  test_api.py  test_safety.py
(+2 files in other folders)
